NOJIRA - Fixing an overflow issue

--- a/devwidgets/activegroups/css/activegroups.css
+++ b/devwidgets/activegroups/css/activegroups.css
@@ -2,3 +2,4 @@
 #activegroups_main {margin:0px 10px 0px 15px;}
 #activegroups_main ul li {list-style-type: none;}
 #activegroups_title {padding-left: 15px !important;}
+.activegroups_widget {overflow: hidden;}
